--- a/less/global.less
+++ b/less/global.less
@@ -10,6 +10,7 @@ html {
 html, body {
   font-family: 'Roboto', sans-serif;
   scroll-behavior: smooth;
+  overflow-x: hidden;
   @media @mobile {
     overflow-x: hidden;
     //This is to allow 100% screen width border above heading image
